; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/executer/extr_exfield.c_AcpiExGetProtocolBufferLength.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/executer/extr_exfield.c_AcpiExGetProtocolBufferLength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_MAX_PROTOCOL_ID = common dso_local global i64 0, align 8
@AcpiProtocolLengths = common dso_local global i64* null, align 8
@ACPI_INVALID_PROTOCOL_ID = common dso_local global i64 0, align 8
@AE_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Invalid Field/AccessAs protocol ID: 0x%4.4X\00", align 1
@AE_AML_PROTOCOL = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AcpiExGetProtocolBufferLength(i64 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @ACPI_MAX_PROTOCOL_ID, align 8
  %8 = icmp ugt i64 %6, %7
  br i1 %8, label %16, label %9

9:                                                ; preds = %2
  %10 = load i64*, i64** @AcpiProtocolLengths, align 8
  %11 = load i64, i64* %4, align 8
  %12 = getelementptr inbounds i64, i64* %10, i64 %11
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @ACPI_INVALID_PROTOCOL_ID, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %9, %2
  %17 = load i32, i32* @AE_INFO, align 4
  %18 = load i64, i64* %4, align 8
  %19 = trunc i64 %18 to i32
  %20 = call i32 @ACPI_ERROR(i32 %19)
  %21 = load i32, i32* @AE_AML_PROTOCOL, align 4
  store i32 %21, i32* %3, align 4
  br label %29

22:                                               ; preds = %9
  %23 = load i64*, i64** @AcpiProtocolLengths, align 8
  %24 = load i64, i64* %4, align 8
  %25 = getelementptr inbounds i64, i64* %23, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = load i64*, i64** %5, align 8
  store i64 %26, i64* %27, align 8
  %28 = load i32, i32* @AE_OK, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %22, %16
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @ACPI_ERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
